--- a/SpeeechRecognition/style.css
+++ b/SpeeechRecognition/style.css
@@ -16,4 +16,34 @@ section{
     flex-direction: column;
     padding: 50px 0;
 }
-
+section h1{
+    color: rgba(255,255,255,0.322);
+    text-align: center;
+    width: 100%;
+    font-size: 70%;
+    margin-bottom: 10px;
+}
+section p{
+    text-align: center;
+    color: rgba(255,255,255,0.322);
+    width: 100%;
+    margin-bottom: 40px;
+}
+.container{
+    width: 90%;
+    max-width: 500px;
+    margin: 0 auto;
+    justify-content: center;
+}
+.texts p{
+    color: black;
+    text-align: left;
+    background-color: white;
+    width: 100%;
+    padding: 6px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+.texts- p.replay{
+    text-align: right;
+}
