--- a/SpeeechRecognition/SpeeechRecognition/style.css
+++ b/SpeeechRecognition/SpeeechRecognition/style.css
@@ -11,21 +11,22 @@ section{
     min-height: 100vh;
     width: 100%;
     display: flex;
-
+   
     background-color: rgb(37,37,37);
     flex-direction: column;
     padding: 50px 0;
 }
 section h1{
-    color: rgba(255,255,255,0.322);
+    color: rgba(255, 255,255, 0.322);
     text-align: center;
     width: 100%;
     font-size: 70%;
     margin-bottom: 10px;
+
 }
 section p{
     text-align: center;
-    color: rgba(255,255,255,0.322);
+    color: rgba(255,255,255, 0.322);
     width: 100%;
     margin-bottom: 40px;
 }
